--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "nodemon": "^1.19.1",
     "python-shell": "^1.0.8",
     "requestify": "^0.2.5",
-    "showdown": "^1.9.0"
+    "showdown": "^1.9.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "babel": "6.23.0",
