--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "http": "0.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.4",
     "nodemon": "^1.19.1",
     "python-shell": "^1.0.8",
