--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.4",
     "nodemon": "^1.19.1",
+    "path": "^0.12.7",
     "python-shell": "^1.0.8",
     "requestify": "^0.2.5",
     "showdown": "^1.9.0",
