--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js --exec babel-node",
     "heroku-postbuild": "npm install",
-    "start:doc": "yarn doc && babel-node server.js",
-    "start": "babel-node server.js",
+    "start": "yarn doc && babel-node server.js",
+    "start:no-doc": "babel-node server.js",
     "crawl:onk2019": "babel-node crawler/crawlUrls.js onk2019",
     "initszk:onk2019": "babel-node crawler/initSzks.js onk2019",
     "saveHtmsToFile": "babel-node utils/saveHtmsToFile.js",
