--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "initszk:onk2019": "babel-node crawler/initSzks.js onk2019",
     "saveHtmsToFile": "babel-node utils/saveHtmsToFile.js",
     "generateKozigEgysegek": "babel-node scripts/generateKozigEgysegek.js",
-    "updateEgySzkTelepules": "babel-node scripts/updateEgySzkTelepules.js",
+    "updateEgySzkTelepules": "babel-node scripts/updateEgySzkTelepules.js onk2019",
+    "updateKezdoVegsoHazszam": "babel-node scripts/updateKezdoVegsoHazszam.js",
     "doc": "apidoc -i routes/ -o apidoc/"
   },
   "repository": {
