merge: kozigegyseg-aggr

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "initszk:onk2019": "babel-node crawler/initSzks.js onk2019",
     "saveHtmsToFile": "babel-node utils/saveHtmsToFile.js",
     "generateKozigEgysegek": "babel-node scripts/generateKozigEgysegek.js",
-    "updateEgySzkTelepules": "babel-node scripts/updateEgySzkTelepules.js onk2019",
+    "updateEgySzkTelepules": "babel-node scripts/updateEgySzkTelepules.js",
     "updateKezdoVegsoHazszam": "babel-node scripts/updateKezdoVegsoHazszam.js",
-    "updateKozigEgysEgySzkTelepules": "babel-node scripts/updateKozigEgysEgySzkTelepules.js",
+    "updateKozigEgysEgySzkTelepules": "babel-node scripts/updateEgySzkTelepules.js",
     "doc": "apidoc -i routes/ -o apidoc/"
   },
   "repository": {
