--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 MONGODB_URI=
-BASE_URL=
-ACCESS_TOKEN_SECRET=
-LOCALHOST_ROLE=
+BASE_URL=http://localhost:1337
+
+# not mandatory for using on localhost
+ACCESS_TOKEN_SECRET= # secret for JWT validation
+LOCALHOST_ROLE=  # 'admin' to emulate admin role on localhost. Leave it empty for emulating normal user.
+DEFAULT_DB=  # fallback value if no db selected. E.G. 'onk2019_v1'
