--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,15 @@
 version: '3.3'
 services:
-  tisztaszavazas-api:
+  api:
     build: .
     ports:
     - "1337:1337"
     env_file:
     - .env
+    depends_on:
+    - db
+
+  db:
+    image: mongo:4.2.2
+    ports:
+      - 27017:27017
