--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js",
+    "server": "node server.js",
     "heroku-postbuild": "npm install",
     "start": "yarn doc && node server.js",
     "start:no-doc": "node server.js",
