--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node server.js",
-    "heroku-postbuild": "npm install",
-    "start": "yarn doc && node server.js",
-    "start:no-doc": "node server.js",
+    "start": "apidoc -i routes/ -o apidoc/ && node server.js",
     "doc": "apidoc -i routes/ -o apidoc/"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/gazdagergo/tisztaszavazas-api.git"
   },
-  "author": "",
+  "author": "info@gazdagergo.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/gazdagergo/tisztaszavazas-api/issues"
@@ -29,7 +25,7 @@
     "express": "^4.17.1",
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.4",
+    "mongoose": "^5.11.9",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "requestify": "^0.2.5",
