--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js --exec babel-node",
-    "heroku-postbuild": "npm install",
-    "start": "yarn doc && babel-node server.js",
-    "start:no-doc": "babel-node server.js",
+    "start": "apidoc -i routes/ -o apidoc/ && node server.js",
     "doc": "apidoc -i routes/ -o apidoc/"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/gazdagergo/tisztaszavazas-api.git"
   },
-  "author": "",
+  "author": "info@gazdagergo.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/gazdagergo/tisztaszavazas-api/issues"
@@ -29,17 +25,11 @@
     "express": "^4.17.1",
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.4",
+    "mongoose": "^5.11.9",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "requestify": "^0.2.5",
     "showdown": "^1.9.0",
     "url": "^0.11.0"
-  },
-  "devDependencies": {
-    "babel": "6.23.0",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "1.6.0"
   }
 }
